--- a/2_layout/8_grid_system_order/index.html
+++ b/2_layout/8_grid_system_order/index.html
@@ -11,20 +11,18 @@
 </head>
 
 <body>
-
+    <!-- ORDENAR A POSISÃO DE ACORDO COM A RESOLUÇÃO -->
     <div class="container">
         <div class="row">
-            <div class="col-sm-8">
-                sm-8
-            </div>
-            <div class="col-sm-4">
-                sm-4
-            </div>
+            <div class="col order-sm-3">Primeira exibição</div>
+            <div class="col order-sm-2">Segunda exibição</div>
+            <div class="col order-sm-1">Terceira exibição</div>
         </div>
         <div class="row">
-            <div class="col">auto</div>
-            <div class="col-sm-5">sm-5</div>
-            <div class="col">auto</div>
+            <div class="col order-md-4">Primeira</div>
+            <div class="col order-md-3">Segunda</div>
+            <div class="col order-md-2">Terceira</div>
+            <div class="col order-md-1">Quarta</div>
         </div>
     </div>
 
