--- a/2_layout/7_grid_system_mobile/index.html
+++ b/2_layout/7_grid_system_mobile/index.html
@@ -14,17 +14,19 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-sm-8">
-                sm-8
-            </div>
-            <div class="col-sm-4">
-                sm-4
-            </div>
+            <div class="col col-md-8">md-8</div>
+            <div class="col col-md-4">md-4</div>
         </div>
         <div class="row">
-            <div class="col">auto</div>
-            <div class="col-sm-5">sm-5</div>
-            <div class="col">auto</div>
+            <div class="col-5 col-md-2">md-2</div>
+            <div class="col-2 col-md-4">md-4</div>
+            <div class="col-5 col-md-6">md-6</div>
+        </div>
+        <div class="row">
+            <div class="col-4 col-sm-2 col-md-3">sm-2 md-3</div>
+            <div class="col-4 col-sm-2 col-md-3">sm-2 md-3</div>
+            <div class="col-2 col-sm-4 col-md-3">sm-4 md-3</div>
+            <div class="col-2 col-sm-4 col-md-3">sm-4 md-3</div>
         </div>
     </div>
 
